--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ div img{
     max-width: 992px;
     margin: auto;
     width: 100%;
+    min-width: 320px;
 }
 
 header{
@@ -45,12 +46,13 @@ header .list-items{
 .list-items li a{
     color: #ffff;
 }
+
 header .menu{
     justify-content: space-between;
 }
 
 .apresentacao{
-    height: 100vh;
+    height: 60vh;
     align-items: center;
     justify-content: space-between;
 }
@@ -65,7 +67,7 @@ header .menu{
     margin-bottom: 10px;
 }
 
-.texto-apresentacao a{
+.btn{
     background-color: #122A57;
     color: #ffff;
     text-align: center;
@@ -129,11 +131,14 @@ header .menu{
 
 .lista-servicos{
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .item-servico{
+    text-align: center;
+}
+
+.lista-servicos .item-servico {
     text-align: center;
 }
 
@@ -147,16 +152,151 @@ header .menu{
     text-decoration: none;
     color: #122a57;
     margin-top: 20px;
-    padding: 5px 0;
-    font-size: 16px;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: 700;
 }
 
 .item-servico p{
     font-weight: 700;
-    font-size: 20px;
+    font-size: 18px;
+    color: #ffff;
+    margin-top: 20px;
 }
 
 .item-servico img{
     max-width: 80%;
     margin: auto;
 }
+
+#planos{
+    flex-direction: column;
+    min-height: 100vh;
+    /* padding-top: 50px; */
+    justify-content: center;
+}
+
+#planos h2 {
+    font-size: 32px;
+    margin-bottom: 50px;
+}
+
+.list-planos{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.item-plano{
+    flex: 1;
+    border: 5px solid #122a57;
+    margin-right: 20px;
+    padding: 10px;
+    max-width: 240px;
+}
+
+.item-plano .btn{
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.item-plano h3{
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.item-plano h3::after{
+    content:"";
+    background-color: #122a57;
+    width: 100%;
+    height: 3px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.item-plano ul{
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.item-plano ul li{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.item-plano ul li::before{
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #122a57;
+    margin-right: 5px;
+}
+
+footer{
+    background-color: #122a57;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.footer{
+    justify-content: space-between;
+    color: #fff;
+}
+
+/* mobile */
+
+@media(max-width: 900px){
+    .flex-container{
+        flex-direction: column;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+
+    .apresentacao .texto-apresentacao{
+        width: 100%;
+    }
+
+    #quem-somos{
+        flex-direction: column-reverse;
+    }
+
+    #quem-somos img{
+        min-width: 320px;
+        margin: auto;
+    }
+
+    .lista-servicos{
+        flex-direction: column;
+    }
+
+    .item-servico img{
+        width: 50%;
+        margin: auto;
+    }
+
+    .list-planos{
+        flex-direction: column;
+        align-items: flex-start;
+        margin-bottom: 20px;
+
+    }
+
+    .list-planos .item-plano{
+        max-width: 90%;
+        margin: auto;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+
+
+
